Popular Tours Added

--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
 
     <!-- Popular Tours -->
 
+    <section id="popular-tours" class="popular-tours">
+        <div class="container">
+            <div class="tour-content">
+                <h2>Our Popular Tours</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis velit nec lorem pellentesque consequat. Mauris id risus quis quam hendrerit lacinia. Integer eget faucibus mauris. Donec id tortor nec odio gravida dictum. Donec ac ligula eget urna hendrerit rutrum. Vivamus non eleifend mauris. Suspendisse luctus nunc at libero lobortis, sed rhoncus odio consectetur. Aliquam sit amet malesuada mi. Nullam vehicula sapien odio, at suscipit dui luctus id.</p>
+                <button class="read-more-btn">Read More</button>
+            </div>
+            <div class="tour-image">
+                <img src="Images/Rectangle 4.png" alt="Popular Tour Image">
+            </div>
+        </div>
+    </section>
+    
+
     <!-- Choose Your Destination -->
 
     <!-- Why Contract Us -->
