Chose Your Destination added

--- a/index.html
+++ b/index.html
@@ -67,17 +67,85 @@
         <div class="container">
             <div class="tour-content">
                 <h2>Our Popular Tours</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis velit nec lorem pellentesque consequat. Mauris id risus quis quam hendrerit lacinia. Integer eget faucibus mauris. Donec id tortor nec odio gravida dictum. Donec ac ligula eget urna hendrerit rutrum. Vivamus non eleifend mauris. Suspendisse luctus nunc at libero lobortis, sed rhoncus odio consectetur. Aliquam sit amet malesuada mi. Nullam vehicula sapien odio, at suscipit dui luctus id.</p>
-                <button class="read-more-btn">Read More</button>
+                <p>Explore the wonders of our popular tour package, where adventure meets relaxation. Discover
+                    breathtaking landscapes, indulge in local cuisine, and immerse yourself in vibrant cultures. With
+                    our expert guides, every moment is filled with excitement and awe. Highlights of the tour include:
+                </p>
+                <ul>
+                    <li>Scenic hikes through majestic mountains</li>
+                    <li>Relaxing boat cruises along tranquil rivers</li>
+                    <li>Fascinating guided tours of historical landmarks</li>
+                    <li>Delicious tastings of authentic local cuisine</li>
+                    <li>Thrilling outdoor adventures for all ages</li>
+                </ul>
+
+                <br><button class="read-more-btn">Read More</button>
             </div>
             <div class="tour-image">
                 <img src="Images/Rectangle 4.png" alt="Popular Tour Image">
             </div>
         </div>
     </section>
-    
+
 
     <!-- Choose Your Destination -->
+
+    <section id="choose-destination" class="choose-destination">
+        <div class="container-cyd">
+            <h2>Choose Your Destination</h2>
+            <p class="paragraph-cyd">Choosing your travel destination can be an exhilarating experience, filled with
+                endless possibilities and anticipation. Whether you're drawn to the sun-kissed beaches of a tropical
+                paradise, the rich cultural tapestry of a historic city, or the serene tranquility of a remote
+                countryside retreat, there's a destination waiting to fulfill your wanderlust dreams. Embrace the thrill
+                of discovery and embark on a journey that resonates with your heart's desires, creating memories that
+                will last a lifetime.</p>
+
+
+            <div class="photo-grid1">
+                <div class="photo">
+                    <img src="Images/Maldives.png" alt="Destination 1">
+                    <div class="photo-caption">Destination 1</div>
+                </div>
+                <div class="photo">
+                    <img src="Images/Indoneshia.png" alt="Destination 2">
+                    <div class="photo-caption">Destination 2</div>
+                </div>
+            </div>
+
+
+            <div class="photo-grid2">
+                <div class="photo">
+                    <img src="Images/Srilanka.png" alt="Destination 3">
+                    <div class="photo-caption">Destination 3</div>
+                </div>
+
+                <div class="photo">
+                    <img src="Images/NorthAmerica.png" alt="Destination 4">
+                    <div class="photo-caption">Destination 4</div>
+                </div>
+                <div class="photo">
+                    <img src="Images/Kashmir.png" alt="Destination 5">
+                    <div class="photo-caption">Destination 5</div>
+                </div>
+            </div>
+
+
+            <div class="photo-grid3">
+                <div class="photo">
+                    <img src="Images/Bangladesh.png" alt="Destination 6">
+                    <div class="photo-caption">Destination 6</div>
+                </div>
+                <div class="photo">
+                    <img src="Images/Banderban.png" alt="Destination 7">
+                    <div class="photo-caption">Destination 7</div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+
+
 
     <!-- Why Contract Us -->
 
@@ -86,6 +154,5 @@
 
     <!-- Footer -->
 
-</body>
 
 </html>
