--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
             <div class="photo-grid1">
                 <div class="photo">
                     <img src="Images/Maldives.png" alt="Maldives">
-                    <div class="photo-caption">Destination 1</div>
+                    <div class="photo-caption">Maldives</div>
                 </div>
                 <div class="photo">
                     <img src="Images/Indoneshia.png" alt="Indoneshia">
-                    <div class="photo-caption">Destination 2</div>
+                    <div class="photo-caption">Indoneshia</div>
                 </div>
             </div>
 
@@ -126,16 +126,16 @@
             <div class="photo-grid2">
                 <div class="photo">
                     <img src="Images/Srilanka.png" alt="Srilanka">
-                    <div class="photo-caption">Destination 3</div>
+                    <div class="photo-caption">Srilanka</div>
                 </div>
 
                 <div class="photo">
                     <img src="Images/NorthAmerica.png" alt="North America">
-                    <div class="photo-caption">Destination 4</div>
+                    <div class="photo-caption">North America</div>
                 </div>
                 <div class="photo">
                     <img src="Images/Kashmir.png" alt="Kashmir">
-                    <div class="photo-caption">Destination 5</div>
+                    <div class="photo-caption">Kashmir</div>
                 </div>
             </div>
 
@@ -143,11 +143,11 @@
             <div class="photo-grid3">
                 <div class="photo">
                     <img src="Images/Bangladesh.png" alt="Bangladesh">
-                    <div class="photo-caption">Destination 6</div>
+                    <div class="photo-caption">Bangladesh</div>
                 </div>
                 <div class="photo">
                     <img src="Images/Banderban.png" alt="Ondorkilla-Bandarban">
-                    <div class="photo-caption">Destination 7</div>
+                    <div class="photo-caption">Ondorkilla-Bandarban</div>
                 </div>
             </div>
         </div>
